--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -2,9 +2,67 @@
 layout: default
 ---
 
+<style>
+  .person-container {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 2rem;
+  }
+  .person-content {
+    flex: 1;
+    margin-right: 2rem;
+  }
+  .person-avatar-container {
+    text-align: center;
+    max-width: 500px; 
+  }
+  .person-avatar {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+  .person-avatar-caption {
+    margin-top: 0.5rem;
+    font-style: italic;
+    color: #666;
+  }
+  .person-name {
+    font-size: 2.8rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  .person-position {
+    font-size: 1.4rem;
+    color: #555;
+    margin-bottom: 0.5rem;
+  }
+  .person-affiliation {
+    font-size: 1.2rem;
+    color: #666;
+    margin-bottom: 1.5rem;
+  }
+  .person-intro {
+    margin-bottom: 2rem;
+    font-size: 1.1rem;
+    line-height: 1.6;
+  }
+</style>
+
 <article class="person">
-  <h1>{{ page.name }}</h1>
-  <p>{{ page.position }}</p>
-  
+  <h1 class="person-name">{{ page.name_en }}</h1>
+  <p class="person-position">{{ page.position_en }}</p>
+  <p class="person-affiliation">{{ page.affiliation_en }}</p>
+  <div class="person-container">
+    <div class="person-content">
+      <div class="person-intro">
+        {{ page.intro }}
+      </div>
+    </div>
+    <div class="person-avatar-container">
+      <img src="{{ page.avatar }}" alt="{{ page.name_en }}" class="person-avatar">
+      <p class="person-avatar-caption">{{ page.name_en }}</p>
+    </div>
+  </div>
   {{ content }}
 </article>
