--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="font-size: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 70%;">
       {{ site.title | escape }}
     </a>
     <nav class="site-nav">
