--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -63,8 +63,8 @@ layout: default
       </div>
     </div>
     <div class="person-avatar-container">
-      <img src="{{ page.avatar }}" alt="{{ page.name_en }}" class="person-avatar">
-      <p class="person-avatar-caption">{{ page.name_en }}</p>
+      <img src="{{ page.avatar }}" alt="{{ page.email }}" class="person-avatar">
+      <p class="person-avatar-caption">{{ page.email }}</p>
     </div>
   </div>
   {{ content }}
